Fixed badge on mobile

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -14,6 +14,4 @@
     white-space: nowrap;
     vertical-align: baseline;
     border-radius: 6px;
-    position: absolute;
-    margin-top: 2px;
 }
